--- a/public/dash.html
+++ b/public/dash.html
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" href="#"><i class="fa fa-google-wallet" aria-hidden="true"></i> CaseWeb</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="usuarioLogado">Bem vindo(a) usuário</a></li>
+                <li id="usuarioLogado"><a href="#">Bem vindo(a) usuário</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >
                         Config. <span class="caret"></span>
